Updating project links

--- a/app/projects.html
+++ b/app/projects.html
@@ -88,7 +88,7 @@
 			<div class="projects__item">
 				<img src="images/projects/codetonix.png" alt="CodeTonix">
 				<div class="projects__btns">
-					<a href="https://jovanamarceta.github.io/jovanamarceta.github.io/CodeTonix/pocetna.html" target="_blank" class="projects__btn">
+					<a href="https://competent-wright-bea617.netlify.app" target="_blank" class="projects__btn">
 					<i class="fas fa-eye"></i> Preview
 					</a>
 					<a href="https://github.com/jovana-marceta/CodeTonix" target="_blank" class="projects__btn">
@@ -110,7 +110,7 @@
 			<div class="projects__item">
 				<img src="images/projects/perfect.png" alt="Perfect match">
 				<div class="projects__btns">
-					<a href="https://jovanamarceta.github.io/jovanamarceta.github.io/PerfectMatch/" target="_blank" class="projects__btn">
+					<a href="https://stupefied-dijkstra-260c16.netlify.app" target="_blank" class="projects__btn">
 					<i class="fas fa-eye"></i> Preview
 					</a>
 					<a href="https://github.com/jovana-marceta/PerfectMatch" target="_blank" class="projects__btn">
@@ -121,7 +121,7 @@
 			<div class="projects__item">
 				<img src="images/projects/lingua.png" alt="Linqua Language School">
 				<div class="projects__btns">
-					<a href="https://jovanamarceta.github.io/jovanamarceta.github.io/Lingua%20Language%20School/index.html" target="_blank" class="projects__btn">
+					<a href="https://musing-ramanujan-7fb55c.netlify.app/" target="_blank" class="projects__btn">
 					<i class="fas fa-eye"></i> Preview
 					</a>
 					<a href="https://github.com/jovana-marceta/Lingua" target="_blank" class="projects__btn">
@@ -132,7 +132,7 @@
 			<div class="projects__item">
 				<img src="images/projects/loan.png" alt="Loan Calculator">
 				<div class="projects__btns">
-					<a href="https://jovanamarceta.github.io/jovanamarceta.github.io/3.LoanCalculator/" target="_blank" class="projects__btn">
+					<a href="https://lucid-gates-f254b0.netlify.app/" target="_blank" class="projects__btn">
 					<i class="fas fa-eye"></i> Preview
 					</a>
 					<a href="https://github.com/jovana-marceta/LoanCalculator" target="_blank" class="projects__btn">
