--- a/app/projects.html
+++ b/app/projects.html
@@ -53,7 +53,8 @@
 	
 		<div class="projects__items">
 			<div class="projects__item">
-				<img src="images/projects/bern.png" alt="Bernhard">
+				<div class="projects__item-bg" style="background-image: url(images/projects/bernhard.png);">
+				</div>
 				<div class="projects__btns">
 					<a href="https://compassionate-shirley-b1e466.netlify.app/" target="_blank" class="projects__btn">
 					<i class="fas fa-eye"></i> Preview
@@ -64,7 +65,8 @@
 				</div>
 			</div>
 			<div class="projects__item">
-				<img src="images/projects/mona.png" alt="Mona">
+				<div class="projects__item-bg" style="background-image: url(images/projects/mona.png);">
+				</div>
 				<div class="projects__btns">
 					<a href="https://nostalgic-darwin-2dff49.netlify.app/" target="_blank" class="projects__btn">
 					<i class="fas fa-eye"></i> Preview
@@ -75,7 +77,8 @@
 				</div>
 			</div>
 			<div class="projects__item">
-				<img src="images/projects/minisoft.png" alt="Minisoft">
+				<div class="projects__item-bg" style="background-image: url(images/projects/minisoft.png);">
+				</div>
 				<div class="projects__btns">
 					<a href="https://naughty-meitner-6af5a9.netlify.app/" target="_blank" class="projects__btn">
 					<i class="fas fa-eye"></i> Preview
@@ -86,7 +89,9 @@
 				</div>
 			</div>
 			<div class="projects__item">
-				<img src="images/projects/codetonix.png" alt="CodeTonix">
+				<div class="projects__item-bg" style="background-image: url(images/projects/codetonix.png);">
+				</div>
+				<!-- <img src="images/projects/codetonix.png" alt="CodeTonix"> -->
 				<div class="projects__btns">
 					<a href="https://competent-wright-bea617.netlify.app" target="_blank" class="projects__btn">
 					<i class="fas fa-eye"></i> Preview
@@ -97,7 +102,9 @@
 				</div>
 			</div>
 			<div class="projects__item">
-				<img src="images/projects/teachguru.png" alt="Teach Guru">
+				<div class="projects__item-bg" style="background-image: url(images/projects/teachguru.png);">
+				</div>
+				<!-- <img src="images/projects/teachguru.png" alt="Teach Guru"> -->
 				<div class="projects__btns">
 					<a href="https://jovanamarceta.github.io/TeachGuru/index.html" target="_blank" class="projects__btn">
 					<i class="fas fa-eye"></i> Preview
@@ -108,7 +115,9 @@
 				</div>
 			</div>
 			<div class="projects__item">
-				<img src="images/projects/perfect.png" alt="Perfect match">
+				<div class="projects__item-bg" style="background-image: url(images/projects/perfect.png);">
+				</div>
+				<!-- <img src="images/projects/perfect.png" alt="Perfect match"> -->
 				<div class="projects__btns">
 					<a href="https://stupefied-dijkstra-260c16.netlify.app" target="_blank" class="projects__btn">
 					<i class="fas fa-eye"></i> Preview
@@ -119,7 +128,9 @@
 				</div>
 			</div>
 			<div class="projects__item">
-				<img src="images/projects/lingua.png" alt="Linqua Language School">
+				<div class="projects__item-bg" style="background-image: url(images/projects/lingua.png);">
+				</div>
+				<!-- <img src="images/projects/lingua.png" alt="Linqua Language School"> -->
 				<div class="projects__btns">
 					<a href="https://musing-ramanujan-7fb55c.netlify.app/" target="_blank" class="projects__btn">
 					<i class="fas fa-eye"></i> Preview
@@ -130,7 +141,9 @@
 				</div>
 			</div>
 			<div class="projects__item">
-				<img src="images/projects/loan.png" alt="Loan Calculator">
+				<div class="projects__item-bg" style="background-image: url(images/projects/loan.png);">
+				</div>
+				<!-- <img src="images/projects/loan.png" alt="Loan Calculator"> -->
 				<div class="projects__btns">
 					<a href="https://lucid-gates-f254b0.netlify.app/" target="_blank" class="projects__btn">
 					<i class="fas fa-eye"></i> Preview
